Organization onboarding alignment fixed

--- a/resources/premassets/css/onboarding.css
+++ b/resources/premassets/css/onboarding.css
@@ -40,9 +40,11 @@ p {
 input {
     border:none !important;
 }
-      
+
 #msform input,
 #msform textarea {
+    margin-left: 0;
+    width: 100%;
     padding: 8px 15px 8px 15px;
     border: none;
     border-radius: 0px;
@@ -177,14 +179,14 @@ input {
 
 @media only screen and (max-width: 580px) {
     #progressbar {
-        margin-bottom: 0px;  
+        margin-bottom: 0px;
         padding: 0;
     }
 }
 #end:after{
     width: 45% !important;
 }
-    
+
 #account:after{
     left: 45% !important;
 }
@@ -200,7 +202,7 @@ input {
     position: relative;
     font-weight: 400
 }
-    
+
 #progressbar #account:before {
     font-family: FontAwesome;
     color:orange;
@@ -301,7 +303,7 @@ input {
       width: 168%;
     }
 }
-  
+
 @media only screen and (width:360px) and (orientation : portrait) {
     body {
       width: 104%;
